--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.29.0",
     "@react-oauth/google": "^0.12.1",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "axios": "^1.8.4",
-    "date-fns": "^2.30.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.4",
     "html2canvas": "^1.4.1",
@@ -29,16 +32,14 @@
     "primereact": "^10.9.2",
     "quill": "^2.0.3",
     "reac": "^0.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
